--- a/list1-6.html
+++ b/list1-6.html
@@ -17,6 +17,10 @@
                 <p>Bootstrap3</p>
             </div>
         </div>
+        <div class="jumbotron">
+            <h1>jumbotronクラスの例</h1>
+            <p>このブロックにはjumbotronクラスを適用しています。</p>
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
